--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-.env
+# Python cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+venv/
+env/
+.env/
+
+# IDE files
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Database files (if any local)
+*.sqlite
+*.db
+
+# Ignore any other sensitive or local configs
+config/settings.py
